# torch-planck2018-lite

./: .gitignore  README.md  dev_script.py  example.py  pyproject.toml  setup.py
src/: main.py  main2.py
torch_planck2018_lite/: main.py
